# comp4300

./: .gitignore  gitpush.sh  readme.md
src/a1/: config.txt  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  game_engine.cpp  game_engine.h  main.cpp
src/a2/: Components.h  Entity.cpp  Entity.h  EntityManager.h  Game.cpp  Game.h  config.txt  main.cpp  readme.txt
src/a3/: Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h  Vec2.cpp  Vec2.h  assets.txt  level1.txt  level2.txt  level3.txt  main.cpp  readme.txt
src/a4/: Action.cpp  Assets.cpp  Assets.h  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityMemoryPool.cpp  EntityMemoryPool.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Profiler.h  Scene.cpp  Scene.h  Scene_Menu.cpp  Scene_Win.cpp  Scene_Win.h  Scene_Zelda.cpp  Scene_Zelda.h  Vec2.cpp  Vec2.h  assets.txt  level1.txt  level2.txt  level3.txt  main.cpp  readme.txt
src/a4/shaders/: player.frag
src/final_project/: .clangd  CMakeLists.txt  Dockerfile  Makefile  Makefile-win  build_win.sh  clean.sh  readme.txt  rebuild-docker.sh  rebuild.sh  run-docker.sh  run.sh  todo.txt
src/final_project/assets/config/levels/txt/: final.txt  level1.txt  level2.txt
src/final_project/assets/lib/darwin/: libzstd.dylib
src/final_project/assets/lib/linux/: libFLAC.so.12
src/final_project/assets/shaders/: firework2.frag  player.frag
src/final_project/src/: Action.cpp  Action.h  Artefact.cpp  Artefact.h  Assets.cpp  Assets.h  Components.h  Compress.cpp  Compress.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EntityMemoryPool.cpp  EntityMemoryPool.h  GameEngine.cpp  GameEngine.h  Helpers.h  Inventory.cpp  Inventory.h  Level.h  Physics.cpp  Physics.h  Profiler.cpp  Profiler.h  Scene.cpp  Scene.h  Scene_Editor.cpp  Scene_Editor.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h  Scene_Settings.cpp  Scene_Settings.h  Scene_Win.cpp  Scene_Win.h  Scene_World.cpp  Scene_World.h  Settings.cpp  (+8 more)
src/particles/: ParticleSystem.hpp  Profiler.h  main.cpp
